# almalead

./: .env-local  .gitignore  Approach.md  DESIGN.md  PROGRESS.md  README.md  Requirements.md  SETUP.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py  2c65a210a18f_seed_attorney_user.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  leads.py
backend/app/core/: config.py  enums.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: lead.py  user.py
backend/app/repositories/: lead_repository.py  user_repository.py
backend/app/schemas/: auth.py  lead.py  user.py
backend/app/services/: auth_service.py  email_service.py  lead_service.py
backend/app/utils/: minio_storage.py  storage.py
backend/e2e/: README.md  test.py
backend/tests/: conftest.py
backend/tests/integration/: test_api.py
backend/tests/unit/test_services/: test_auth_service.py  test_lead_service.py
docs/: API.md  DESIGN.md
